# worldspawn

./: .gitignore  AUTHORS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
content/mapsrc/: construct.map  flatgrass.map  plinko.map  techdemo.map  techdemo2.map  testroom.map
content/mediasrc/: craplogo.xcf
content/modelsrc/: box.blend  box.iqe  box.qc  flatbox.blend  flatbox.iqe  flatbox.qc  sphere.blend  sphere.iqe  sphere.qc  tallbox.blend  tallbox.iqe  tallbox.qc  tube.blend  tube.iqe  tube.qc
content/modelsrc/classic64/: box_01.iqe  box_01.qc  pvc_pipe.iqe  pvc_pipe.qc  pvc_pipe_pallet.iqe  pvc_pipe_pallet.qc
content/modelsrc/rowen/: barrel01.qc  barrel01.smd  metalsheet01.iqe  metalsheet01.qc  metalsheet02.iqe  metalsheet02.qc  milkcrate01.iqe  milkcrate01.qc
content/modelsrc/sprites/: pal.iqe  pal.qc
contrib/: BSD3
game/: default.fmf
game/worldspawn/: default.cfg  dev.cfg
game/worldspawn/maps/: test.hmp
game/worldspawn/maps/test/: block_00_00.hms  block_00_ff.hms  block_ff_00.hms  block_ff_ff.hms
game/worldspawn/models/classic64/: box_01.iqm_0.skin  box_01.iqm_1.skin  box_01.iqm_2.skin  box_01.iqm_3.skin
game/worldspawn/models/rowen/: barrel01.iqm_0.skin  barrel01.iqm_1.skin  barrel01.iqm_2.skin  metalsheet01.iqm.json  metalsheet02.iqm.json
game/worldspawn/models/sprites/: pal.iqm_0.skin  pal.iqm_1.skin
game/worldspawn/scripts/: animated.shader  liquids.shader  models.shader  sprites.shader
game/worldspawn/textures/liquids/: water01a.wal_json
game/worldspawn/textures/tools/: clip.wal_json  hint.wal_json  hintskip.wal_json  ladder.wal_json  lavaskip.wal_json  monsterclip.wal_json  nodraw.wal_json  origin.wal_json  playerclip.wal_Json  sky.wal_json  slimeskip.wal_json  waterskip.wal_json
source/client/: chat.qc  defs.qc  line.qc  main.qc
source/server/: defs.qc  lqdefs.qc  main.qc  physgun.qc  physicsentity.qc
source/server/entities/: env_physexplosion.qc  func_breakable.qc  func_brush.qc  func_physbox.qc  info_player_start.qc  npc_pal.qc  phys_box.qc  phys_constraint.qc  phys_sphere.qc  phys_springbox.qc  prop_physics.qc  prop_static.qc  sky_camera.qc  worldspawn.qc
source/shared/: defs.qc  spline.qc
tools/cmake/: toolchain-i686-w64-mingw32.cmake  toolchain-x86_64-w64-mingw32.cmake
tools/netradiantcustom_config/gamepacks/games/: worldspawn.game
tools/netradiantcustom_config/gamepacks/worldspawn.game/: default_build_menu.xml
tools/trenchbroom_config/: CompilationProfiles.cfg  GameConfig.cfg  ericw_tools.fgd  worldspawn.fgd
